# os-dev-box

./: ansible.cfg  pyproject.toml  site.yml
group_vars/all/: packages.yml  pip.yml  projects.yml
